exports[`(.not).toHaveNotImplementedStatus > using axios > .not.toHaveNotImplementedStatus > fails when response have status code 501 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveNotImplementedStatus()</intensity>

Expected status code to not be 501 received:
  <red>501</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 501,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveNotImplementedStatus > using axios > .toHaveNotImplementedStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveNotImplementedStatus()</intensity>

Expected status code to be 501 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
